<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img_photo_desc"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/watchable_title"
        android:textSize="18sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toTopOf="@+id/img_photo" />

    <TextView
        android:id="@+id/tv_pretext_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/pretext_popularity"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/watchable_popularity"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_pretext_popularity" />

    <TextView
        android:id="@+id/tv_pretext_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_popularity"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/pretext_release"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_popularity" />

    <TextView
        android:id="@+id/tv_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_popularity"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/watchable_release"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_pretext_release" />

</androidx.constraintlayout.widget.ConstraintLayout>